--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<h1>Welcome to my github page</h1>
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <div class="container">
+        <form class="login-form" id="loginForm">
+            <h2>LOGIN</h2>
+            <div class="input-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" required>
+            </div>
+            <div class="input-group">
+                <label for="password">password</label>
+                <input type="password" id="password" required>
+            </div>
+            <button type="submit" onclick="login()">登录</button>
+            <p class="message" id="message"></p>
+        </form>
+    </div>
+    <script src="js/scripts.js"></script>
+</body>
+</html>
