--- a/feedback.html
+++ b/feedback.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--引入 font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="/css/style-fe.css">
+    <link rel="stylesheet" href="css/style-fe.css">
     <title>FeedBack Page</title>
 </head>
 
